@@ -1,5 +1,7 @@
 1.4.18
  * Fix "--repository" flag to accept relative paths.
+ * Fix "borgmatic umount" so it only runs Borg once instead of once per repository / configuration
+   file.
  * #253: Mount whole repositories via "borgmatic mount" without any "--archive" flag.
 
 1.4.17
